--- a/AdminLTE-3.2.0/panel.html
+++ b/AdminLTE-3.2.0/panel.html
@@ -98,7 +98,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link active">
+                <a href="#" class="nav-link">
                   <i class="fa fa-table nav-icon"></i>
                   <p>Ventas</p>
                 </a>
@@ -110,9 +110,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="../AdminLTE-3.2.0/usuarios.html" class="nav-link">
                   <i class="far fa-user nav-icon"></i>
-                  <p>Clientes</p>
+                  <p>usuarios</p>
                 </a>
               </li>
               <li class="nav-item">
