--- a/sections/bebidas.html
+++ b/sections/bebidas.html
@@ -25,7 +25,7 @@
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
                     <li class="nav-item">
-                        <a href="../index.html" class="navbar-link" data-nav-link>Inicio</a>
+                        <a href="../sections/index.html" class="navbar-link" data-nav-link>Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a href="../sections/about.html" class="navbar-link" data-nav-link>Sobre Nosotros</a>
