--- a/AdminLTE-3.2.0/usuarios.html
+++ b/AdminLTE-3.2.0/usuarios.html
@@ -99,7 +99,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="../AdminLTE-3.2.0/ventas.html" class="nav-link">
                   <i class="fa fa-table nav-icon"></i>
                   <p>Ventas</p>
                 </a>
@@ -117,9 +117,38 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index.html" class="nav-link">
+                <a href="#" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Informes</p> 
+                  <p>
+                    Informes
+                    <i class="right fas fa-angle-left"></i>
+                  </p>
+                </a>
+                <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="../AdminLTE-3.2.0/analisis-clientes.html" class="nav-link">
+                      <i class="fa fa-chart-bar nav-icon"></i>
+                      <p>Analisis de clientes</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="../AdminLTE-3.2.0/analisis-productos.html" class="nav-link">
+                      <i class="fas fa-chart-line nav-icon"></i>
+                      <p>Análisis de Productos</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="../AdminLTE-3.2.0/analisis-promociones.html" class="nav-link">
+                      <i class="fas fa-tags nav-icon"></i>
+                      <p>Análisis de Promociones</p>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a href="../AdminLTE-3.2.0/comentarios.html" class="nav-link">
+                  <i class= "fas fa-comment nav-icon"></i>
+                  <p>comentarios</p>
                 </a>
               </li>
         </ul>
@@ -135,7 +164,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Productos</h1>
+            <h1>Usuarios</h1>
           </div>
         </div>
       </div><!-- /.container-fluid -->
