--- a/sections/index.html
+++ b/sections/index.html
@@ -108,7 +108,7 @@
     </main>
 
     <footer class="footer">
-        <div class="footer-top" style="background-image: url('./static/img/footer-illustration.png')">
+        <div class="footer-top" style="background-image: url('../static/img/footer-illustration.png')">
             <div class="container">
                 <div class="footer-brand">
                     <a href="" class="logo">Rosario Fiesta<span class="span">.</span></a>
