--- a/AdminLTE-3.2.0/analisis-clientes.html
+++ b/AdminLTE-3.2.0/analisis-clientes.html
@@ -25,6 +25,9 @@
   <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css">
+   <!-- Incluir los scripts y CSS de Select2 en el encabezado -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -112,7 +115,7 @@
               <li class="nav-item">
                 <a href="../AdminLTE-3.2.0/usuarios.html" class="nav-link">
                   <i class="far fa-user nav-icon"></i>
-                  <p>usuarios</p>
+                  <p>Usuarios</p>
                 </a>
               </li>
               <li class="nav-item">
@@ -157,6 +160,44 @@
     <!-- /.sidebar -->
   </aside>
   <!-- /.content-wrapper -->
+  <div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1></h1>Informes
+          </div>
+        </div>
+      </div><!-- /.container-fluid -->
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+      <div class="card" style="width: 100%; height: 100%;">
+          <div class="card-header">
+              <h3 class="card-title">Informe de Análisis de Clientes</h3>
+          </div>
+          <div class="card-body" style="width: 100%; height: 100%;">
+              <form id="formularioInforme" method="POST" action="../../RosarioFiesta-back/public/clientReport.php">
+                  <!-- Selección de Clientes -->
+                  <div class="form-group">
+                      <label for="clientes">Seleccionar Clientes</label>
+                      <select id="clientes" class="form-control select2" name="clientes[]" multiple="multiple" style="width: 100%;" required>
+                          <!-- Las opciones de clientes se agregarán aquí dinámicamente con JavaScript -->
+                      </select>
+                  </div>
+                  <!-- Botón de Generar Informe -->
+                  <button type="submit" class="btn btn-primary">Generar Informe</button>
+              </form>
+          </div>
+      </div>
+  </section>
+    <!-- /.content -->
+  </div>
+
+
+
   <footer class="main-footer">
     <strong>Copyright &copy; 2023-2024 <a href="https://adminlte.io">PMP Soluciones</a>.</strong>
     All rights reserved.
@@ -168,10 +209,11 @@
   </aside>
   <!-- /.control-sidebar -->
 </div>
-<!-- ./wrapper -->
-
+<!-- js -->
+<!-- <script src="../static/javascript/modal-productos.js"></script> -->
+<script src="../static/javascript/analisis-clientes.js"></script>
 <!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
+<script src="plugins/jquery/jquery.min.js"></script> 
 <!-- jQuery UI 1.11.4 -->
 <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -204,5 +246,15 @@
 <script src="dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
+<script>
+    $(document).ready(function() {
+      $('#clientes').select2({
+        placeholder: "Selecciona los clientes",
+        allowClear: true
+      });
+    });
+  </script>
+
+
 </body>
 </html>
