--- a/AdminLTE-3.2.0/analisis-promociones.html
+++ b/AdminLTE-3.2.0/analisis-promociones.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css">
+   
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -112,7 +113,7 @@
               <li class="nav-item">
                 <a href="../AdminLTE-3.2.0/usuarios.html" class="nav-link">
                   <i class="far fa-user nav-icon"></i>
-                  <p>usuarios</p>
+                  <p>Usuarios</p>
                 </a>
               </li>
               <li class="nav-item">
@@ -157,6 +158,49 @@
     <!-- /.sidebar -->
   </aside>
   <!-- /.content-wrapper -->
+  <div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1>Informes</h1>
+          </div>
+        </div>
+      </div><!-- /.container-fluid -->
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Informe de Análisis de Promociones</h3>
+            </div>
+            <div class="card-body">
+              <form id="formularioInforme" method="POST" action="../../RosarioFiesta-back/public/promotionsReport.php">
+                <!-- Selección de rango de fechas -->
+                <div class="form-group">
+                  <label for="promo_fecha_inicio">Fecha Inicio</label>
+                  <input type="date" id="promo_fecha_inicio" name="promo_fecha_inicio" class="form-control">
+                </div>
+                <div class="form-group">
+                  <label for="promo_fecha_fin">Fecha Fin</label>
+                  <input type="date" id="promo_fecha_fin" name="promo_fecha_fin" class="form-control">
+                </div>
+                
+                <!-- Botón de Generar Informe -->
+                <button type="submit" class="btn btn-primary">Generar Informe</button>
+              </form>
+            </div>
+          </div>
+          
+      <!-- /.container-fluid -->
+    </section>
+    <!-- /.content -->
+  </div>
+
+
+
   <footer class="main-footer">
     <strong>Copyright &copy; 2023-2024 <a href="https://adminlte.io">PMP Soluciones</a>.</strong>
     All rights reserved.
@@ -168,10 +212,11 @@
   </aside>
   <!-- /.control-sidebar -->
 </div>
-<!-- ./wrapper -->
-
+<!-- js -->
+<!-- <script src="../static/javascript/modal-productos.js"></script> -->
+<script src="../static/javascript/analisis-promociones.js"></script>
 <!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
+<script src="plugins/jquery/jquery.min.js"></script> 
 <!-- jQuery UI 1.11.4 -->
 <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -204,5 +249,7 @@
 <script src="dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
+
+
 </body>
 </html>
