--- a/AdminLTE-3.2.0/productos.html
+++ b/AdminLTE-3.2.0/productos.html
@@ -58,7 +58,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link">
+    <a href="../sections/index.html" class="brand-link">
       <img src="../static/img/logo rosario fiesta (1).png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Rosario Fiesta</span>
     </a>
@@ -99,7 +99,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="../AdminLTE-3.2.0/ventas.html" class="nav-link">
                   <i class="fa fa-table nav-icon"></i>
                   <p>Ventas</p>
                 </a>
@@ -117,9 +117,38 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index.html" class="nav-link">
+                <a href="#" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Informes</p> 
+                  <p>
+                    Informes
+                    <i class="right fas fa-angle-left"></i>
+                  </p>
+                </a>
+                <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="./index.html" class="nav-link">
+                      <i class="fa fa-chart-bar nav-icon"></i>
+                      <p>Analisis de clientes</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="../AdminLTE-3.2.0/analisis-productos.html" class="nav-link">
+                      <i class="fas fa-chart-line nav-icon"></i>
+                      <p>Análisis de Productos</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="../AdminLTE-3.2.0/analisis-promociones.html" class="nav-link">
+                      <i class="fas fa-tags nav-icon"></i>
+                      <p>Análisis de Promociones</p>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a href="../AdminLTE-3.2.0/comentarios.html" class="nav-link">
+                  <i class="fas fa-comment nav-icon"></i>
+                  <p>comentarios</p>
                 </a>
               </li>
         </ul>
@@ -196,7 +225,7 @@
     </section>
     <!-- /.content -->
   </div>
-<!-- Modal para agregar o editar producto -->
+<!-- Modal para agregar  producto -->
 <div class="modal fade" id="modalProducto" tabindex="-1" aria-labelledby="modalProductoLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -288,6 +317,10 @@
           <div class="form-group">
             <label for="editCategoria">Categoría</label>
             <input type="number" class="form-control" id="editCategoria" required>
+          </div>
+          <div class="form-group">
+            <label for="editImg">URL de la Imagen</label>
+            <input type="text" class="form-control" id="editImg" required>
           </div>
           <button type="submit" class="btn btn-primary">Guardar Cambios</button>
         </form>
