--- a/AdminLTE-3.2.0/comentarios.html
+++ b/AdminLTE-3.2.0/comentarios.html
@@ -58,7 +58,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link">
+    <a href="../sections/index.html" class="brand-link">
       <img src="../static/img/logo rosario fiesta (1).png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Rosario Fiesta</span>
     </a>
@@ -232,6 +232,7 @@
 <!-- js -->
 <!-- <script src="../static/javascript/modal-productos.js"></script> -->
 <script src="../static/javascript/comentario-panel.js"></script>
+<script src="../static/javascript/protect.js"></script>
 <!-- jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script> 
 <!-- jQuery UI 1.11.4 -->
