--- a/AdminLTE-3.2.0/productos.html
+++ b/AdminLTE-3.2.0/productos.html
@@ -347,6 +347,7 @@
 <!-- js -->
 <!-- <script src="../static/javascript/modal-productos.js"></script> -->
 <script src="../static/javascript/productos-panel.js"></script>
+<script src="../static/javascript/protect.js"></script>
 <!-- jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script> 
 <!-- jQuery UI 1.11.4 -->
