--- a/sections/form-pago.html
+++ b/sections/form-pago.html
@@ -80,7 +80,7 @@
                   </tr>
               </thead>
               <tbody id="productos-resumen" class="table-body">
-                  <!-- Productos se llenarán dinámicamente con JS -->
+                  <!-- Productos se llenarán dinámicamente -->
               </tbody>
               <tfoot class="table-footer">
                   <tr class="table-row">
