--- a/AdminLTE-3.2.0/panel.html
+++ b/AdminLTE-3.2.0/panel.html
@@ -57,7 +57,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link">
+    <a href="../sections/index.html" class="brand-link">
       <img src="../static/img/logo rosario fiesta (1).png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Rosario Fiesta</span>
     </a>
@@ -169,7 +169,9 @@
   <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
-
+ 
+<!-- js -->
+<script src="../static/javascript/protect.js"></script>
 <!-- jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
