--- a/sections/register.html
+++ b/sections/register.html
@@ -73,26 +73,26 @@
             <form onsubmit="return validoCrear();" method="POST">
                 <div class="form-group-register">
                     <label for="fullName">Nombre Completo</label>
-                    <input type="text" id="fullName" name="fullName" required>
+                    <input type="text" id="fullName" name="fullName">
                     <div id="F-NameCrear"></div>
                 </div>
                 <div class="form-group-register">
                     <label for="dni">DNI</label>
-                    <input type="text" id="dni" name="dni" required>
+                    <input type="text" id="dni" name="dni">
                     <div id="F-dniCrear"></div>
                 </div>
                 <div class="form-group-register">
                     <label for="email">Correo Electrónico</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="text" id="email" name="email">
                     <div id="F-emailCrear"></div>
                 </div>
                 <div class="form-group-register">
                     <label for="password">Contraseña</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password">
                     <div id="F-passCrear"></div>
                 </div>
                 <div class="form-group-register checkbox-group">
-                    <input type="checkbox" id="terminos" name="terminos" required>
+                    <input type="checkbox" id="terminos" name="terminos">
                     <label for="terminos">Acepto los términos y condiciones</label>
                     <div id="F-Check"></div>
                 </div>
