--- a/AdminLTE-3.2.0/analisis-clientes.html
+++ b/AdminLTE-3.2.0/analisis-clientes.html
@@ -70,7 +70,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="info">
-          <a href="#" class="d-block">Administrador</a>
+          <a href="promociones.html" class="d-block">Administrador</a>
         </div>
       </div>
 
@@ -110,6 +110,12 @@
                 <a href="../AdminLTE-3.2.0/productos.html" class="nav-link">
                   <i class="fa fa-shopping-bag nav-icon"></i>
                   <p>Productos</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../AdminLTE-3.2.0/promociones.html" class="nav-link">
+                  <i class="fa fa-percent nav-icon"></i>
+                  <p>Promociones</p>
                 </a>
               </li>
               <li class="nav-item">
