--- a/AdminLTE-3.2.0/panel.html
+++ b/AdminLTE-3.2.0/panel.html
@@ -70,7 +70,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="info">
-          <a href="#" class="d-block">Administrador</a>
+          <a href="promociones.html" class="d-block">Administrador</a>
         </div>
       </div>
 
@@ -110,6 +110,12 @@
                 <a href="../AdminLTE-3.2.0/productos.html" class="nav-link">
                   <i class="fa fa-shopping-bag nav-icon"></i>
                   <p>Productos</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../AdminLTE-3.2.0/promociones.html" class="nav-link">
+                  <i class="fa fa-percent nav-icon"></i>
+                  <p>Promociones</p>
                 </a>
               </li>
               <li class="nav-item">
@@ -236,6 +242,17 @@
                 <i class="fas fa-gift"></i>
                 <h5 class="card-title mt-3">Análisis de Promociones</h5>
                 <p class="card-text">Analiza el impacto de las promociones y su rendimiento.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card for  Promociones -->
+          <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card card-option" onclick="location.href='promociones'">
+              <div class="card-body">
+                <i class="fas fa-percent"></i>
+                <h5 class="card-title mt-3">Promociones</h5>
+                <p class="card-text">Administra el inventario de promociones disponibles.</p>
               </div>
             </div>
           </div>
