--- a/sections/form-pago.html
+++ b/sections/form-pago.html
@@ -117,6 +117,22 @@
                   <label for="cvv">CVV</label>
                   <input type="text" id="cvv" maxlength="3" name="numero-cvv" >
               </div>
+              <!-- Información de Mercado Pago -->
+              <div id="form-mercadopago" style="display: none;">
+                <div class="mercadopago-container">
+                    <h3>Detalles de Mercado Pago</h3>
+                    <p>Realiza tu pago utilizando los siguientes datos:</p>
+                    <div class="mercadopago-details">
+                        <p><strong>Alias:</strong> RosarioFiesta.mp</p>
+                        <p><strong>CBU:</strong> 1234567890123456789012</p>
+                        <p><strong>CUIT:</strong> 20-12345678-9</p>
+                    </div>
+                    <p class="mercadopago-instructions">
+                        Por favor, envía el comprobante de tu pago a nuestro WhatsApp: 
+                        <a href="https://wa.me/5491234567890" target="_blank">+54 9 123 456 7890</a>
+                    </p>
+                </div>
+            </div>
   
               <button type="submit" class="btn-pagar">Finalizar Pago</button>
           </form>
